Removing Unfinished Project

--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -20,6 +20,10 @@
   pageRef = "posts"
   weight = 20
 
+[[main]]
+  name = "Resume"
+  pageRef = "resume"
+  weight = 20
 # -- Footer Menu --
 # The footer menu is displayed at the bottom of the page, just before
 # the copyright notice. Configure as per the main menu above.
